Put the exported profile on the clipboard through the OS
The AWT clipboard never worked: Minecraft starts the JVM with
java.awt.headless=true, so getSystemClipboard throws HeadlessException.
The mod logged it as a warning and carried on, which is why the button
appeared to do nothing.

Setting the property back at runtime is too late -- the toolkit is already
cached as HeadlessToolkit -- and clearing the cached fields needs
reflection into java.awt, which the module system refuses without an
--add-opens no launcher passes.

Encoding a PNG needs no display, so the picture is written to a temp file
and the platform's own clipboard tool is asked to publish it: PowerShell
on Windows, osascript on macOS, wl-copy or xclip on Linux. Windows gets
both PNG and bitmap flavours, so applications that prefer either are
satisfied, and SetDataObject(copy: true) leaves it there once PowerShell
exits.

Encoding and the subprocess run on their own thread; only the pixel
readback happens on the render thread, so a slow clipboard tool cannot
stall a frame.

Verified by reading the image back from the Windows clipboard in a
separate process while the game was running: 1551x876, formats PNG and
Bitmap.